fix css position on small screens

--- a/src/App.css
+++ b/src/App.css
@@ -65,7 +65,7 @@
 @media only screen and (min-width: 800px) {
   .container {
     margin:0 auto;
-    width:70%;
+    width:100%;
     display:flex;
     position:relative;
   }
